--- a/style.css
+++ b/style.css
@@ -25,8 +25,9 @@ h1 {
 .image {
 	display: block;
 	margin: auto;
-	width: 50%;
+	width: 20vmax;
 	border-radius: 8px;
+	margin-top: 10px
 }
 
 .text {
@@ -50,6 +51,6 @@ h1 {
 	margin: auto;
 }
 
-#gif {
-	width: 60%;
+video {
+	width: 90%;
 }
